[gd_scene load_steps=18 format=3 uid="uid://b6nhi7t3aa35a"]

[ext_resource type="PackedScene" uid="uid://d15672pv2gjus" path="res://Target/Target.tscn" id="1_sbsok"]
[ext_resource type="PackedScene" uid="uid://pvqt43lxq2nm" path="res://Player/Player.tscn" id="2_57l1u"]
[ext_resource type="Script" path="res://Levels/Test/QuestManager.gd" id="3_eaw8k"]
[ext_resource type="Script" path="res://Actor/ActorManager.gd" id="3_m5rps"]
[ext_resource type="Script" path="res://Item/ItemManager.gd" id="4_cp81l"]
[ext_resource type="PackedScene" uid="uid://cy1gj6npk7tb7" path="res://Actor/Actor.tscn" id="4_gggpm"]
[ext_resource type="PackedScene" uid="uid://cq5dw6tsdy5s5" path="res://Item/Item.tscn" id="5_rx58r"]
[ext_resource type="PackedScene" uid="uid://duet24obufwr6" path="res://Actor/Flyers/CultZine.tscn" id="7_7mlfv"]
[ext_resource type="PackedScene" uid="uid://btiah8ogwersj" path="res://Actor/Flyers/SaloonFlyer.tscn" id="9_tksak"]
[ext_resource type="PackedScene" uid="uid://mc245y40bhee" path="res://Actor/Characters/Gus.tscn" id="10_mrwpc"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ida35"]
energy_multiplier = 0.8

[sub_resource type="Sky" id="Sky_jken0"]
sky_material = SubResource("ProceduralSkyMaterial_ida35")

[sub_resource type="Environment" id="Environment_pmaes"]
background_mode = 2
background_color = Color(0.0115899, 0.00853991, 0.0274126, 1)
sky = SubResource("Sky_jken0")

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_inbyj"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_k13xs"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_r1mq3"]

[sub_resource type="PlaneMesh" id="PlaneMesh_fmrs1"]

[node name="WorldEnvironment" type="WorldEnvironment"]
environment = SubResource("Environment_pmaes")
camera_attributes = SubResource("CameraAttributesPractical_inbyj")

[node name="Target" parent="." node_paths=PackedStringArray("next_target") instance=ExtResource("1_sbsok")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.09479, -9.53674e-07, -15.7375)
next_target = NodePath(".")

[node name="Player" parent="." instance=ExtResource("2_57l1u")]
unique_name_in_owner = true

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 0.69203, 0.721869, 0, -0.721869, 0.69203, 0, 12.6816, 9.5174)

[node name="SkyLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.999885, 0.0151663, 0, -0.0151663, 0.999885, 0, 0, 0)
light_color = Color(0.741605, 0.475084, 0.0247729, 1)
light_indirect_energy = 0.0
light_volumetric_fog_energy = 16.0

[node name="Ground" type="StaticBody3D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_k13xs")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("WorldBoundaryShape3D_r1mq3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(512, 0, 0, 0, 512, 0, 0, 0, 512, 0, 0, 0)
mesh = SubResource("PlaneMesh_fmrs1")
skeleton = NodePath("../CollisionShape3D")

[node name="QuestManager" type="Node" parent="."]
script = ExtResource("3_eaw8k")

[node name="ItemManager" type="Node" parent="QuestManager"]
script = ExtResource("4_cp81l")

[node name="ItemUI" type="CanvasLayer" parent="QuestManager/ItemManager"]

[node name="Pick Up Text" type="RichTextLabel" parent="QuestManager/ItemManager/ItemUI"]
visible = false
offset_left = 234.0
offset_top = 473.0
offset_right = 477.0
offset_bottom = 498.0
text = "Press E to pick up items"

[node name="PresentItems" type="Node" parent="QuestManager/ItemManager"]

[node name="Item" parent="QuestManager/ItemManager/PresentItems" instance=ExtResource("5_rx58r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.843843, 1.03957, 7.16795)

[node name="Item2" parent="QuestManager/ItemManager/PresentItems" instance=ExtResource("5_rx58r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.25496, 1, 6.80012)
type = 1

[node name="Item3" parent="QuestManager/ItemManager/PresentItems" instance=ExtResource("5_rx58r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.05719, 1, -8.61207)
type = 2

[node name="ActorManager" type="Node" parent="QuestManager"]
process_mode = 2
script = ExtResource("3_m5rps")

[node name="ActorUI" type="CanvasLayer" parent="QuestManager/ActorManager"]
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="QuestManager/ActorManager/ActorUI"]
offset_left = 93.0
offset_top = 328.0
offset_right = 593.0
offset_bottom = 580.0

[node name="ActorName" type="RichTextLabel" parent="QuestManager/ActorManager/ActorUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
text = "Actor Name"

[node name="DescriptionBox" type="RichTextLabel" parent="QuestManager/ActorManager/ActorUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
text = "Jubba"

[node name="DialogBox" type="RichTextLabel" parent="QuestManager/ActorManager/ActorUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
text = "Pla2"

[node name="0" type="Button" parent="QuestManager/ActorManager/ActorUI/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "0"

[node name="1" type="Button" parent="QuestManager/ActorManager/ActorUI/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "1"

[node name="2" type="Button" parent="QuestManager/ActorManager/ActorUI/VBoxContainer"]
visible = false
layout_mode = 2
text = "2"

[node name="3" type="Button" parent="QuestManager/ActorManager/ActorUI/VBoxContainer"]
visible = false
layout_mode = 2
text = "3"

[node name="PresentActors" type="Node" parent="QuestManager/ActorManager"]
process_mode = 1

[node name="Actor2" parent="QuestManager/ActorManager/PresentActors" node_paths=PackedStringArray("target") instance=ExtResource("7_7mlfv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.9867, 1, -4.79389)
target = NodePath("../../../../Target")

[node name="Actor4" parent="QuestManager/ActorManager/PresentActors" node_paths=PackedStringArray("target") instance=ExtResource("9_tksak")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.3293, 1, -5.11367)
target = NodePath("../../../../Target")

[node name="Actor" parent="QuestManager/ActorManager/PresentActors" node_paths=PackedStringArray("target") instance=ExtResource("4_gggpm")]
process_physics_priority = 90
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.922431, 1, -2.88784)
target = NodePath("../../../../Target")
dialog_json = "res://Actor/Dialog/Abigale.json"
follow_player = true

[node name="Actor3" parent="QuestManager/ActorManager/PresentActors" node_paths=PackedStringArray("target") instance=ExtResource("10_mrwpc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11, 1, -4)
target = NodePath("../../../../Target")
